🔧 fixed listing page title clipping issue 🔧

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -430,7 +430,9 @@ li:not(:first-child) span {
         #1c0466 90%,
         #f284f8 100%
     );
-    background-size: 200%;
+    /* background-size: 200%; */
+    line-height: 1.2;
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 1.5px #f5f5f5;
@@ -466,6 +468,46 @@ li:not(:first-child) span {
     font-variation-settings: "wght" 100, "ital" 0;
     text-shadow: none;
 }
+
+/* heres antoher title variation */
+
+/* #retro-title {
+  
+    h1 {
+      color: #C6CBF5;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 140px;
+      font-weight: 1000;
+      line-height: 1.2;
+      margin: 0;
+      text-align: center;
+      text-transform: uppercase;
+      width:100%;
+      z-index: 10;
+      background: -webkit-linear-gradient(top, #151C60, #C6CBF5 40%, black 40%, #E1A0CE 65%, white);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -webkit-text-stroke-width: 2px;
+      -webkit-text-stroke-color: white;
+    }
+  
+    h2 {
+      color: #d100b1;
+      display: block;
+      font-family: 'Yellowtail', cursive;
+      font-size: 150px;
+      text-shadow: 0 0 1px #d100b1, 0 -3px 3px rgba(255, 255, 255, 0.8), 0 3px 3px rgba(0, 0, 0, 0.5), 0 0 15px #d100b1, 0 0 45px rgba(209, 0, 177, 0.8);
+      text-align: center;
+      text-decoration: underline;
+      text-transform: none;
+      -webkit-transform: skew(-10deg) rotate(-10deg);
+      -ms-transform: skew(-10deg) rotate(-10deg);
+      transform: skew(-10deg) rotate(-10deg);
+      width: 100%;
+      z-index: 10;
+      margin-top: -8%;
+    }
+  } */
 
 /* background-color: #8357eb; */
 
